# drone-buddy-library

./: .readthedocs.yaml  Dockerfile  DroneBuddy.drawio  MANIFEST.in  NEW_README.md  README.md  READ_ME_LONG.md  dronebuddylib.md  extra_requirements.txt  main.py  pyproject.toml  requirements.txt  requirements_docker.txt  setup.py
Test/: test_face_recognition.py  test_objectdetection.py  test_speech2text.py  test_text_2_speech.py
dblib/: HandControl-INJA.py  HandControl.py  Text2Speech.py  __init__.py  objectdetection.py  utils.py
docs-sphinx/: conf.py  dronebuddylib.atoms.llmintegration.models.rst  dronebuddylib.atoms.llmintegration.rst  dronebuddylib.atoms.navigation.rst  dronebuddylib.atoms.objectdetection.rst  dronebuddylib.atoms.objectidentification.resources.matching.rst  dronebuddylib.atoms.objectidentification.resources.rst  dronebuddylib.atoms.placerecognition.rst  dronebuddylib.atoms.rst  dronebuddylib.atoms.textrecognition.rst  dronebuddylib.codeexample.rst  dronebuddylib.developerguide.rst  dronebuddylib.gpt_integrationinstallation.rst  dronebuddylib.installationguide.rst  dronebuddylib.intentrecognitioninstallation.rst  dronebuddylib.models.rst  dronebuddylib.snipsinstallation.rst  dronebuddylib.userguide.facerecognition.rst  dronebuddylib.userguide.llmintegration.rst  dronebuddylib.userguide.navigation.rst  dronebuddylib.userguide.objectdetection.rst  dronebuddylib.userguide.placerecognition.rst  dronebuddylib.userguide.rst  face_recc_installation_guide.rst  face_recogntion_installation_guide.rst  google_voice_installation_guide.rst  index.rst  modules.rst  (+7 more)
(+757 files in other folders)
