[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dronebuddylib"
version = "0.0.1"
authors = [
  { name="Malsha de Zoysa", email="malsha@ahlab.org" },
]
description = "Everything to control and customize Telloe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"